removed graphic captcha, added text question-answer based "captcha", minor XHTML fixes to few templates

--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/post_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/post_list.html
@@ -143,6 +143,9 @@ $(document).ready(function()    {
     </div>
 </form>
 {% endif %}{% endif %}
+{% if perms.is_spam %}
+<div class="box">{% trans "To many anonymous posts. Login to post topics and new messages." %}</div>
+{% endif %}
 
 <p style="text-align:right;"><br />
 	{% if perms.add_topic %}
