--- a/trunk/diamandas/pages/templates/pages/bug.html
+++ b/trunk/diamandas/pages/templates/pages/bug.html
@@ -1,7 +1,6 @@
 {% extends "pages/body.html" %}
 {% load i18n %}
+
 {% block content %}
-<h2>{{ bug }}</h2>
-<br />
-<h2 style="text-align:center;"><a href="/">{% trans "Main Page" %}</a></h2>
+<div class="msg"><p>{{ bug }}</p><p>You can go to <a href="/">{% trans "main page" %}</a>{% if not user.is_authenticated %}, {% trans "or login on this website using" %} <a href="/user/login/">{% trans "login form" %}</a>{% endif %}.</p></div>
 {% endblock %}
