--- a/trunk/diamandas/pages/templates/pages/show_index.html
+++ b/trunk/diamandas/pages/templates/pages/show_index.html
@@ -4,8 +4,9 @@
 
 {% block content %}
 <div id="right">
-	<h3 style="margin:0px;">{% trans "Whats new?" %}</h3>
-	{{ feed.text|safe }}
+	
+	<h3 style="margin:0px;">{% trans "Whats new?" %} <a href="/w/rss/" id="feed_rss">{% trans "RSS" %}</a></h3>
+	{{ feed|safe }}
 	
 	{% if onsite %}
 	<h3 style="margin-bottom:0px;">{% trans "Users online" %}</h3>
