--- a/trunk/diamandas/pages/templates/pages/show.html
+++ b/trunk/diamandas/pages/templates/pages/show.html
@@ -5,16 +5,22 @@
 {% block description %}{{ page.description }}{% endblock %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a>{% if page.crumb %} > {{ page.crumb|safe }}{% endif %}{% endblock %}
 
-{% block content %}{{ page.parsed_text|safe }}
-
+{% block content %}{{ page.text|safe }}
 <ul class="newsbox">
 	<li class="added">{{ page.date|date:"d.m.Y" }}</li>
-	<li class="comment"><a href="#c">{% trans "Comments" %}{% if page.comments_count %} ({{ page.comments_count }}){% endif %}</a></li>
+	<li class="comment">
+		{% if page.coment_topic %}
+			<a href="/forum/topic/1/{{ page.coment_topic.id }}/">{% trans "Comments" %}{% if page.comments_count %} ({{ page.comments_count }}){% endif %}</a>
+		{% else %}
+			<a href="#c">{% trans "Comments" %}{% if page.comments_count %} ({{ page.comments_count }}){% endif %}</a>
+		{% endif %}
+	</li>
 	<li class="aauthor">{{ page.author }}</li>
 	{% if page.is_update %}<li class="update">{{ page.changes }}</li>{% endif %}
-
+	{% if not show_comment %}<li><input type="button" value="{% trans "Add a Comment" %}" onclick="location.assign('/w/p/{{ page.slug }}/?c=ok');" /></li>{% endif %}
 </ul>
 {% if add_topic %}
+	{% if show_comment %}
 	<form method="post" action=".">
 	<div class="postform">
 		<div class="posthead">{% trans "Add comment" %}</div>
@@ -22,7 +28,7 @@
 			<div class="leftpostform">
 				<strong>{% trans "Nick" %}</strong>
 			</div>
-			<div class="rightpostform">	
+			<div class="rightpostform">
 				{{ form.nick }}{% if form.nick.errors %}<br />*** {{ form.nick.errors|join:", " }}{% endif %}
 			</div>
 		{% endif %}
@@ -51,6 +57,7 @@
 		</div>
 	</div>
 	</form>
+	{% endif %}
 {% else %}
 	{% if user.is_authenticated %}<div class="box">{% trans "Comments have been disabled for this page" %}</div>{% endif %}
 {% endif %}
@@ -69,11 +76,13 @@
 		<li><a href="/w/n/">{% trans "Browse news" %}</a></li>
 	{% endif %}
 {% endifequal %}
-{% if user.is_staff %}<li><a href="/admin/pages/content/{{ page.id }}/">{% trans "Edit" %}</a></li>{% endif %}
+{% if user.is_authenticated %}<li><a href="/w/submit/">{% trans "Add Content" %}</a></li>{% endif %}
+{% if user.is_staff %}<li><a href="/admin/pages/content/{{ page.id }}/">{% trans "Admin" %}</a></li>{% endif %}
 {% endblock %}
 
 {% block meta %}
 {% if page.coment_forum or page.place.coment_forum %}
+	{% if show_comment %}
 	<link rel="stylesheet" type="text/css" href="/site_media/layout/markitup/skins/simple/style.css" />
 	<link rel="stylesheet" type="text/css" href="/site_media/layout/markitup/sets/bbcode/style.css" />
 	<script type="text/javascript" src="/site_media/layout/markitup/jquery.markitup.pack.js"></script>
@@ -89,5 +98,6 @@
 	});
 	});
 	</script>
+	{% endif %}
 {% endif %}
 {% endblock %}
