--- a/trunk/diamandas/userpanel/templates/userpanel/login.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/login.html
@@ -1,26 +1,38 @@
-{% extends "pages/body.html" %}
+{% extends "pages/body_light.html" %}
 {% load i18n %}
 {% block content %}
-<h2>{% trans "Log in" %}</h2>
 {% if form.has_errors %}
 <div class="errmsg">{% trans "Your username and password didn't match. Please try again." %}</div>
 {% endif %}
 
 <form method="post" action=".">
 <div class="content">
-<table style="width:50%;">
-<tr class="rowA"><td class="first"><label for="id_username">{% trans "Username" %}:</label></td><td>{{ form.username }}</td></tr>
-<tr class="rowB"><td class="first"><label for="id_password">{% trans "Password" %}:</label></td><td>{{ form.password }}</td></tr>
+<table>
+<tr><th colspan="2" class="first"><strong>{% trans "Standard login" %}</strong></th></tr>
+<tr class="rowA small"><td class="first" style="width:30%;"><label for="id_username">{% trans "Username" %}:</label></td><td>{{ form.username }}</td></tr>
+<tr class="rowB small"><td class="first"><label for="id_password">{% trans "Password" %}:</label></td><td>{{ form.password }}</td></tr>
+<tr class="rowA small"><td class="first" colspan="2"><input type="submit" value="{% trans "Login" %}"></td></tr>
+</table>
+<input type="hidden" name="next" value="{{ next }}" />
+</div>
+</form>
+<br />
+<form method="post" action="/openid/">
+<div class="content">
+<table>
+<tr><th colspan="2" class="first"><strong>{% trans "OpenID" %}</strong></th></tr>
+<tr class="rowA small"><td class="first" style="width:30%;"><label for="openid_url"><img src="/site_media/layout/openid.png" alt="openID" /></label></td><td><input class="openid" type="text" name="openid_url" id="openid_url"></td></tr>
+<tr class="rowB small"><td class="first" colspan="2"><input type="submit" value="{% trans "Login" %}"></td></tr>
 </table>
 </div>
-<br /><div class="box"><br /><div style="text-align:center;"><input type="submit" value="{% trans "Login" %}"><br /><br />
-<input type="button" value="{% trans "Register" %}" onclick="location.assign('/user/register/');">
-<input type="button" value="{% trans "Lost Password" %}" onclick="location.assign('/user/password_reset/');">
-</div><br />
-</div>
-<input type="hidden" name="next" value="{{ next }}" />
 </form>
 
+<div style="text-align:center;">
+<input type="button" value="{% trans "Register" %}" onclick="location.assign('/user/register/');"><br />
+<input type="button" value="{% trans "Lost Password" %}" onclick="location.assign('/user/password_reset/');">
+</div>
+
+
+
+
 {% endblock %}
-{% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/user/">{% trans "User Panel" %}</a>{% endblock %}
-{% block on_user %} id="current"{% endblock %}
