--- a/trunk/diamandas/userpanel/templates/userpanel/login_light.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/login_light.html
@@ -1,4 +1,4 @@
-{% extends "pages/body.html" %}
+{% extends "pages/body_light.html" %}
 {% load i18n %}
 {% block content %}
 {% trans "As a registered user you will have full access to comments and forum. Registration isn't however required to browse this site content." %}
@@ -33,5 +33,3 @@
 </div>
 </form>
 {% endblock %}
-{% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/user/">{% trans "User Panel" %}</a>{% endblock %}
-{% block on_user %} id="current"{% endblock %}
