--- a/trunk/diamandas/userpanel/templates/userpanel/register.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/register.html
@@ -3,9 +3,6 @@
 {% block content %}
 <h2>{% trans "Register" %}</h2>
 <form action="." method="post"><input type="hidden" value="{{ hash }}" name="answer" />
-{% if error %}
-	<div class="errmsg">{% trans "Registration Error" %}</div>
-{% endif %}
 <div class="content">
           <table style="width:50%;">
             <tr class="rowA">
@@ -24,7 +21,7 @@
               <td class="first"><b>{% trans "Email" %}</b></td>
               <td>{{ form.email }}{% if form.email.errors %}<div class="errmsg">{{ form.email.errors|join:", " }}</div>{% endif %}</td>
             </tr>
-            <tr class="rowB">
+            <tr class="rowA">
               <td class="first"><b>{% trans "What's the answer?" %}</b></td>
               <td>	<b>{{ question }}</b><br />
 			{{ form.reply }}{% if form.reply.errors %}<div class="errmsg">{{ form.reply.errors|join:", " }}</div>{% endif %}<br /></td>
