--- a/trunk/diamandas/pages/templates/pages/bug.html
+++ b/trunk/diamandas/pages/templates/pages/bug.html
@@ -2,5 +2,5 @@
 {% load i18n %}
 
 {% block content %}
-<div class="msg"><p>{{ bug }}</p><p>You can go to <a href="/">{% trans "main page" %}</a>{% if not user.is_authenticated %}, {% trans "or login on this website using" %} <a href="/user/login/">{% trans "login form" %}</a>{% endif %}.</p></div>
+<div class="msg"><p>{{ bug }}</p><p>{% trans "You can go to" %} <a href="/">{% trans "main page" %}</a>{% if not user.is_authenticated %}, {% trans "or login on this website using" %} <a href="/user/login/">{% trans "login form" %}</a>{% endif %}.</p></div>
 {% endblock %}
