--- a/trunk/site_media/layout/style.css
+++ b/trunk/site_media/layout/style.css
@@ -6,7 +6,7 @@ background-color:#143D55;
 font-size:13px;
 font-family:"DejaVu Sans", verdana, tahoma, arial;
 }
-
+/* Top header styles  */
 #crumb
 {
 	background-color:#0C2432;
@@ -999,7 +999,7 @@ color: black;
 	background-color:#C8D7E3;
 	border:1px solid #3C78B5;
 	border-bottom:0px;
-	padding:3px;
+	padding:4px;
 	margin:0px;
 	text-align:center;
 	margin-top:6px;
@@ -1009,10 +1009,29 @@ color: black;
 {
 	border:1px solid #3C78B5;
 	background:#F5F7F1;
+	padding:4px;
 }
+
+.content_float
+{
+	float:right;
+	width:25%;
+	margin:10px;
+	margin-right:0px;
+}
+
 
 input.openid {
   background: url(login-bg.gif) no-repeat;
   background-position: 0 50%;
   padding-left: 20px;
+}
+
+.plus
+{
+list-style-image: url(plus.png);
+}
+.minus
+{
+list-style-image: url(minus.png);
 }
