--- a/trunk/diamandas/pages/templates/feed/forum_rss.html
+++ b/trunk/diamandas/pages/templates/feed/forum_rss.html
@@ -2,6 +2,6 @@
 <guid>http://www.{{ domain }}/forum/topic/{{ pagination_page }}/{{ topic_id }}/</guid>
 <link>http://www.{{ domain }}/forum/topic/{{ pagination_page }}/{{ topic_id }}/</link>
 <title>{{ prefix }}{{ title }}</title>
-<description>{{ description|safe }}</description>
+<description><![CDATA[{{ description|safe }}]]></description>
 <pubDate>{{ date }}</pubDate>
 </item>
