Identify captcha by one-time, time expiring token to prevent reusage of broken captcha text by bots. i18n support for captcha.py

--- a/trunk/diamandas/userpanel/templates/userpanel/register.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/register.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% block content %}
 <h2>{% trans "Register" %}</h2>
-<form action="." method="post"><input type="hidden" value="{{ hash }}" name="answer" />
+<form action="." method="post"><input type="hidden" value="{{ token }}" name="token" />
 <div class="content">
           <table style="width:50%;">
             <tr class="rowA">
