--- a/trunk/diamandas/userpanel/templates/userpanel/login.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% trans "As a registered user you will have full access to comments and forum. Registration isn't however required to browse this site content." %}
 <ul>
-<li>{% trans "If you are a new user you can" %} <a href="/user/register/"><b>{% trans "register" %}</b></a> using a simple form.</li>
+<li>{% trans "If you are a new user you can" %} <a href="/user/register/"><b>{% trans "register" %}</b></a> {% trans "using a simple form" %}.</li>
 <li>{% trans "If you forgotten your password, then you can" %} <a href="/user/password_reset/"><b>{% trans "reset it" %}</b></a>.</li>
 </ul>
 
