--- a/trunk/diamandas/userpanel/templates/userpanel/register_openid.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/register_openid.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h2>{% trans "Quick registration for" %} {{ openid }}</h2>
 {% trans "Fill in this form to get features of a full user account. You will be automatically logged in when you use your openID. No extra passwords! :)" %}
-<form action="." method="post"><input type="hidden" value="{{ hash }}" name="answer" />
+<form action="." method="post"><input type="hidden" value="{{ token }}" name="token" />
 <div class="content">
           <table style="width:50%;">
             <tr class="rowA">
